--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Lista de Tarefas</title>
 </head>
 <body>
-    <h1> hello word </h1>
+
+    <header>
+
+        <h1> hello word </h1>
+
+    </header>
+
 </body>
 </html>
