--- a/index.html
+++ b/index.html
@@ -63,13 +63,15 @@
     <section id="weekend">
 
         <h2 class="title">Final de Semana</h2>
+
         <br>
+
         <div>
-            <h3>>Sábado</h3>
+            <h3>Sábado</h3>
         </div>
 
         <div>
-            <h3>>Domingo</h3>
+            <h3>Domingo</h3>
         </div>
 
     </section>
