--- a/index.html
+++ b/index.html
@@ -34,26 +34,53 @@
 
     <section id="week">
 
-        <h2 class="title">Senama</h2>
+        <h2 class="title">- - - Senama - - -</h2>
         <br>
         <div>
             <h3>Segunda</h3>
-        </div>
+            <div class="input">
+                <input type="text" oninput="inserir(this)" >
+                <a onclick="inserir(this)">
+                    <img class="lixo" src="./assets/click2.png">
+                </a>
+            </div>        </div>
         
         <div>
             <h3>Terça</h3>
+            <div class="input">
+                <input type="text" oninput="inserir(this)" >
+                <a onclick="inserir(this)">
+                    <img class="lixo" src="./assets/click2.png">
+                </a>
+            </div>
         </div>
 
         <div>
             <h3>Quarta</h3>
-        </div>
+            <div class="input">
+                <input type="text" oninput="inserir(this)" >
+                <a onclick="inserir(this)">
+                    <img class="lixo" src="./assets/click2.png">
+                </a>
+            </div>        </div>
 
         <div>
             <h3>Quinta</h3>
-        </div>
+            <div class="input">
+                <input type="text" oninput="inserir(this)" >
+                <a onclick="inserir(this)">
+                    <img class="lixo" src="./assets/click2.png">
+                </a>
+            </div>        </div>
 
         <div>
             <h3>Sexta</h3>
+            <div class="input">
+                <input type="text" oninput="inserir(this)" >
+                <a onclick="inserir(this)">
+                    <img class="lixo" src="./assets/click2.png">
+                </a>
+            </div>
         </div>
 
     </section>
@@ -62,16 +89,28 @@
 
     <section id="weekend">
 
-        <h2 class="title">Final de Semana</h2>
+        <h2 class="title">- - - Final de Semana - - -</h2>
 
         <br>
 
         <div>
             <h3>Sábado</h3>
+            <div class="input">
+                <input type="text" oninput="inserir(this)" >
+                <a onclick="inserir(this)">
+                    <img class="lixo" src="./assets/click2.png">
+                </a>
+            </div>
         </div>
 
         <div>
             <h3>Domingo</h3>
+            <div class="input">
+                <input type="text" oninput="inserir(this)" >
+                <a onclick="inserir(this)">
+                    <img class="lixo" src="./assets/click2.png">
+                </a>
+            </div>
         </div>
 
     </section>
@@ -84,6 +123,7 @@
 
 </footer>
 
+<script type="text/javascript" src="assets/script.js"></script>
 
 </body>
 </html>
