--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
 
 <main>
 
+    <h2 class="title">- - - Week - - -</h2>
+
     <section id="week">
 
-        <h2 class="title">- - - Senama - - -</h2>
-
-        <br>
 
         <div class="tasks">
 
@@ -41,7 +40,7 @@
 
             <div class="input">
                 <input id="i1" type="text" placeholder="task">
-                <a onclick="inserir(document.getElementById('i1'))">
+                <a onclick="inserir(0, document.getElementById('i1'))">
                     <img class="enviar" src="./assets/click2.png">
                 </a>
             </div>
@@ -59,7 +58,7 @@
 
             <div class="input">
                 <input id="i2" type="text" placeholder="task">
-                <a id="seg" onclick="inserir(document.getElementById('i2'))">
+                <a id="seg" onclick="inserir(1, document.getElementById('i2'))">
                     <img class="enviar" src="./assets/click2.png">
                 </a>
             </div>
@@ -78,7 +77,7 @@
 
             <div class="input">
                 <input id="i3" type="text" placeholder="task">
-                <a id="ter" onclick="inserir(document.getElementById('i3'))">
+                <a id="ter" onclick="inserir(2, document.getElementById('i3'))">
                     <img class="enviar" src="./assets/click2.png">
                 </a>
             </div>
@@ -86,9 +85,6 @@
             <br>
 
             <div id="d3">
-
-        
-
             </div>
 
         </div>
@@ -99,7 +95,7 @@
 
             <div class="input">
                 <input id="i4" type="text" placeholder="task">
-                <a onclick="inserir(document.getElementById('i4'))">
+                <a onclick="inserir(3, document.getElementById('i4'))">
                     <img class="enviar" src="./assets/click2.png">
                 </a>
             </div>
@@ -121,7 +117,7 @@
 
             <div class="input">
                 <input id="i5" type="text" placeholder="task">
-                <a onclick="inserir(document.getElementById('i5'))">
+                <a onclick="inserir(4, document.getElementById('i5'))">
                     <img class="enviar" src="./assets/click2.png">
                 </a>
             </div>
@@ -138,9 +134,10 @@
 
     <br>
 
-    <section id="weekend">
+    <h2 class="title">- - - Final de Semana - - -</h2>
 
-        <h2 class="title">- - - Final de Semana - - -</h2>
+
+    <section id="weekend">
 
         <br>
 
@@ -150,7 +147,7 @@
 
             <div class="input">
                 <input id="i6" type="text" placeholder="task">
-                <a onclick="inserir(document.getElementById('i6'))">
+                <a onclick="inserir(5, document.getElementById('i6'))">
                     <img class="enviar" src="./assets/click2.png">
                 </a>
             </div>
@@ -169,7 +166,7 @@
 
             <div class="input">
                 <input id="i7" type="text" placeholder="task">
-                <a onclick="inserir(document.getElementById('i7'))">
+                <a onclick="inserir(6, document.getElementById('i7'))">
                     <img class="enviar" src="./assets/click2.png">
                 </a>
             </div>
