--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <br>
 
             <div id="d1">
+                <!-- <p class="task0" onclick="apagar(document)">asdasdasdasd</p> -->
 
             </div>
 
