fase 7.5 - implementando apagador

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <div class="input">
                 <input id="i1" type="text" placeholder="task">
-                <a onclick="inserir(0, document.getElementById('i1'))">
+                <a class="botton" onclick="inserir(0, document.getElementById('i1'))">
                     <img class="enviar" src="./assets/click2.png">
                 </a>
             </div>
@@ -48,7 +48,6 @@
             <br>
 
             <div id="d1">
-                <!-- <p class="task0" onclick="apagar(document)">asdasdasdasd</p> -->
 
             </div>
 
